adding and refactoring: mixins, actions, components directory

--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 <body>
 <main>
     <section class="hero">
+        <div class="hero__container container">
+            <header class="hero__header">
+                <a href="#" class="hero__title">Hogwarts Legacy</a>
+                <nav class="hero__nav">
+                    <ul class="hero__list">
+                        <li class="hero__list-item">
+                            <a href="#about">Main</a>
+                        </li>
+                        <li class="hero__list-item">
+                            <a href="#effects">About</a>
+                        </li>
+                        <li class="hero__list-item">
+                            <a href="#footer">Features</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a href="#">
+                    contact me
+                </a>
+            </header>
+        </div>
+
         <canvas id="sparkCanvas">
         </canvas>
         <div class="wrapper-base"></div>
