editing: style.scss

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 </head>
 <body>
 <main>
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="hero__container container">
             <header class="hero__header">
                 <a href="#" class="hero__title">Hogwarts Legacy</a>
                 <nav class="hero__nav">
                     <ul class="hero__list">
-                        <li class="hero__list-item">
-                            <a href="#about">Main</a>
+                        <li>
+                            <a href="#hero" class="hero__list-item">Main</a>
                         </li>
-                        <li class="hero__list-item">
-                            <a href="#effects">About</a>
+                        <li>
+                            <a href="#" class="hero__list-item">About</a>
                         </li>
-                        <li class="hero__list-item">
-                            <a href="#footer">Features</a>
+                        <li>
+                            <a href="#" class="hero__list-item">Features</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="#">
+                <a href="#" class="hero__contact-me">
                     contact me
                 </a>
             </header>
